---------------------------------------------------------------------------------------------------
Version: 2.1.5
Date: ????
  Changes:
    - Small omnicium & iron electric poles require 2 copper wires
    - You get 2 omnicium / iron electric poles per craft now (lib bugfix)
    - Replaced coal in rock loot with omnified fuel
  Bugfixes:
    - Fixed that the burner filter inserter was in the wrong subgroup with boblogistics
---------------------------------------------------------------------------------------------------
Version: 2.1.4
Date: 2020.12.27
  Bugfixes:
    - Fixed that certain loader recipes were unlockable
    - Fixed that the basic splitter and underground tech was not localised porperly
    - Fixed a green science deadlock with angels industries component mode
    - Fixed inserter recipe compatibility with PyCoalTBaA
---------------------------------------------------------------------------------------------------
Version: 2.1.3
Date: 2020.12.23
  Changes:
    - Buffed all omnified fuel values by 20% (T1 at 150% now (130% before), decreasing 5% per tier)
    - Fuel values of fuels that cant be used are now being nilled
  Bugfixes:
    - Fixed that the burner omnifurnace mk1 did not accept (crushed-) omnite as fuel
---------------------------------------------------------------------------------------------------
Version: 2.1.2
Date: 2020.12.16
  Bugfixes:
    - Fixed that inserters required the wrong kind of circuit with bobs (logi sp deadlocked)
---------------------------------------------------------------------------------------------------
Version: 2.1.1
Date: 2020.12.14
  Features:
    - Added Krastorio 2 support
  Changes:
    - Switch omnitor assemling machine´s crafting category from basic-crafting to crafting
    - Early game burner entities now accept omnified fuels aswell
    - Removed burner inserter mk2 and burner filter inserter mk2
    - High tier omnium-power techs that have no unlocks are now hidden